# RDT01---IGG

./: .gitignore  README.md  docker-compose.yml  sources.json
.github/workflows/: release.yml
backend/: Dockerfile  pyproject.toml  requirements-cpu.txt  requirements.txt
backend/src/: jobs.py  main.py
backend/src/api/: __init__.py  routes_debug.py  routes_folders.py  routes_lane.py  routes_models.py  routes_projects.py  routes_reports.py
backend/src/core/: config.py  dependencies.py
backend/src/models/: detection.py  pavement.py  project.py
backend/src/services/: detection_processor.py  igg_calculator.py  image_processor.py  inference_engine.py  inference_pipeline.py  lane_calibrate.py  lane_roi_service.py  model_loader.py  planilha_import.py
backend/src/services/lane_roi/: __init__.py  calibration.py  detector.py  tracker.py  viz.py
backend/src/utils/: geometry.py
backend/tests/: test_placeholder.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  icons.tsx  index.css  store.ts
frontend/src/components/: AnaliseView.tsx  FolderBrowser.tsx  JobsList.tsx  Layout.tsx  Processing.tsx  ReportsView.tsx  SettingsView.tsx  TestInference.tsx  TipoSelector.tsx  ViagemConfigForm.tsx
frontend/src/services/: api.ts  index.ts  onnx.ts
frontend/src/types/: index.ts
modelos/igg/: config.json
