[project]
name = "rdt01-backend"
version = "0.1.0"
description = "Backend do Sistema de Análise de Patologias de Pavimento RDT01"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "python-multipart>=0.0.18",
    "opencv-contrib-python-headless>=4.10.0",
    "Pillow>=11.0.0",
    "numpy>=2.0.0",
    "redis>=5.2.0",
    "rq>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
